[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dust3r"
version = "0.1.0"
description = "Forked DUSt3R package"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "SZucchini" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["dust3r*"]
